TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "137751962839760" [label="Start"];
  "137751962839760" -> "137751962844320";
  "137751962844320" [label="Code"];
  "137751962844320" -> "137751962838464";
  "137751962838464" [label="Function"];
  "137751962838464" -> "137751962844272";
  "137751962838464" -> "137751962842832";
  "137751962838464" -> "137751962838320";
  "137751962844272" [label="main IDENTIFIER"];
  "137751962842832" [label="Parameters"];
  "137751962838320" [label="Code"];
  "137751962838320" -> "137751960910912";
  "137751962838320" -> "137751960910768";
  "137751960910912" [label="Declaration"];
  "137751960910912" -> "137751960911632";
  "137751960910912" -> "137751960901456";
  "137751960911632" [label="x IDENTIFIER"];
  "137751960901456" [label="54 INT"];
  "137751960910768" [label="Declaration"];
  "137751960910768" -> "137751960899968";
  "137751960910768" -> "137751960905728";
  "137751960899968" [label="y IDENTIFIER"];
  "137751960905728" [label="Expr"];
  "137751960905728" -> "137751960897904";
  "137751960905728" -> "137751960896128";
  "137751960897904" [label="& T__38"];
  "137751960896128" [label="x IDENTIFIER"];
}
